<resources>
    <string name="app_name">Weknot</string>
    <string name="app_email">\@weknot.com</string>

    <string name="main_title">Weknot</string>
    <string name="signup_title">회원가입</string>
    <string name="feed_write_title">글쓰기</string>
    <string name="feed_title">웃긴 게시판</string>
    <string name="video_call_title">랜덤 영상통화</string>
    <string name="open_chat_title">오픈 채팅방</string>
    <string name="chat_title">채팅방</string>
    <string name="social_title">친구</string>
    <string name="myinfo_title">마이 페이지</string>
    <string name="profile_title">프로필</string>
    <string name="option_title">설정</string>
    <string name="chat_member_title">대화상대</string>

    <string name="id_text">아이디</string>
    <string name="pw_text">비밀번호</string>
    <string name="name_text">이름</string>
    <string name="gender_text">성별</string>
    <string name="birth_text">생일</string>
    <string name="intro_text">한줄 소개</string>
    <string name="phone_number_text">전화번호</string>
    <string name="no_id_text">계정이 없으신가요?</string>
    <string name="login_text">로그인</string>
    <string name="signup_text">회원가입</string>
    <string name="video_call_text">랜덤매칭하기</string>
    <string name="video_call_history_text">방금 통화한 사람</string>
    <string name="friend_apply_list_text">요청 목록</string>
    <string name="friend_list_text">친구 목록</string>
    <string name="friend_accept_text">수락</string>
    <string name="friend_reject_text">거절</string>
    <string name="room_name_text">방 이름</string>
    <string name="create_room_text">채팅방 만들기</string>
    <string name="logout_text">로그아웃 하시겠습니까?</string>
    <string name="exit_room_text">채팅방에서 나가시겠습니까?</string>
    <string name="yes_text">네</string>
    <string name="no_text">아니요</string>
    <string name="report_text">신고하고 나갈래요</string>

    <string name="empty_message">빈칸 없이 입력해 주세요</string>
    <string name="exist_message">취소 되었습니다</string>
    <string name="empty_picture_message">프로필 사진을 설정해 주세요</string>
    <string name="download_message">이 기기에 사진을 저장했습니다</string>
    <string name="check_friend_message">친구가 아닙니다</string>
    <string name="check_my_id_message">나에게는 DM을 보낼수 없습니다</string>
    <string name="signup_error_message">현재 회원가입은 \n 개발자 모드로 설정되어 있습니다 \n 존재하는 아이디로 로그인해주세요 </string>
</resources>
