<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
<data>
    <variable
        name="viewModel"
        type="com.example.weknot_android.viewmodel.LoginViewModel" />
</data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLoginBackground">

    <ImageView
        android:id="@+id/input_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:adjustViewBounds="true"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="0dp"
        android:layout_height="450dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:elevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="24dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_id"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/id_text"
                    app:boxBackgroundColor="@android:color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/id_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="flagNoExtractUi|flagNoFullscreen|flagNoAccessoryAction"
                        android:inputType="textEmailAddress"
                        android:privateImeOptions="nm"
                        android:text="@={viewModel.request.id}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_pw"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pw_text"
                    app:boxBackgroundColor="@android:color/white"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pw_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone|flagNoExtractUi|flagNoFullscreen|flagNoAccessoryAction"
                        android:inputType="textPassword"
                        android:privateImeOptions="nm"
                        android:text="@={viewModel.request.password}" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/background_signup_button"
                android:fontFamily="@font/nanum_squareeb"
                android:gravity="center"
                android:onClick="@{() -> viewModel.onClickLogin()}"
                android:padding="15dp"
                android:text="@string/login_text"
                android:textColor="@color/colorLine"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/nanum_squareb"
                android:text="@string/no_id_text"
                app:layout_constraintBottom_toBottomOf="@+id/sign_up_button"
                app:layout_constraintEnd_toStartOf="@+id/sign_up_button"
                app:layout_constraintTop_toTopOf="@+id/sign_up_button" />

            <TextView
                android:id="@+id/sign_up_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="35dp"
                android:layout_marginBottom="80dp"
                android:fontFamily="@font/nanum_squareeb"
                android:onClick="@{() -> viewModel.onClickSignUp()}"
                android:text="@string/signup_text"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>